--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
   <body>
     <h1>Welcome</h1>
     <p>Esto es el ejemplo básico de una página web</p>
-</body>
+    <p>Esto es un párrafo, que tiene una palabra en <b>negrita</b>. </p>
+    <p>Este es el párrafo del examen</p>
+  </body>
 </html>
