--- a/dos.html
+++ b/dos.html
@@ -2,5 +2,10 @@
     <head>
         <link href="css/estilos.css" type="text/css" rel="stylesheet">
     </head>
-    <body></body>
+    <body>
+        <p>esta va a ser la segunda página</p>
+    <div>
+        <a href="index.html">Volver</a>
+    </div>
+    </body>
 </html>
