--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <html>
 <header>
-  <link 
- Página web de ejemplo
-  </header>
+  <link href="css/estilos.css" type="text/css" rel="stylesheet">
+  </head>
   <body>
     <h1>Welcome</h1>
     <p>Esto es el ejemplo básico de una página web</p>
     <p>Esto es un párrafo, que tiene una palabra en <b>negrita</b>. </p>
     <p>Este es el párrafo del examen</p>
+  <div>
+    <a href="dos.html">Página 2</a>
+  </div>
   </body>
 </html>
