--- a/dos.html
+++ b/dos.html
@@ -3,7 +3,14 @@
         <link href="css/estilos.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <p>esta va a ser la segunda página</p>
+        <p> Las víctimas de ciberbullying suelen manifestar cambios en su conducta, como tristeza o depresión. También pueden sufrir trastornos en su rendimiento escolar</p>
+        <p>Las personas mas propensas a tener cybber bulling son: 
+            lesbianas, homosexuales, transgénero o quienes cuestionan su 
+            identidad sexual (LGBTQ), los jóvenes con discapacidades y los 
+            jóvenes aislados socialmente pueden tener mayor riesgo 
+            de ser acosados</p>
+        <p>Las causas del ciberbullying suelen ser las mismas que encontramos detrás del acoso físico; los acosadores son personas que normalmente tienen baja autoestima y hacer daño a otras personas les hace sentirse fuertes y con poder.</p>
+        <p>Los paises que mas sufren de ciber bullyng son México, Estados Unidos y China, lugares en donde más del 50% de niños sufren de acoso.</p>
     <div>
         <a href="index.html">Volver</a>
     </div>
