--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <link href="css/estilos.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Welcome</h1>
-    <p>Esto es el ejemplo básico de una página web</p>
-    <p>Esto es un párrafo, que tiene una palabra en <b>negrita</b>. </p>
-    <p>Este es el párrafo del examen</p>
+    <h1>El cyber bulling</h1>
+    <p>Es un tipo de acoso en el que se utilizan los medios digitales para hacer daño a la víctima, conscientemente y de forma repetida en el tiempo.</p>
+    <p><b>Consecuencias</b> daña la autoestima y la capacidad de los menores para relacionarse entre sí, y en casos extremos puede conducirlos a una depresión.</p>
+    <p> Alguien que es víctima de ciberbullying constantemente está revisando su celular o sus redes sociales para ver si han dicho algo en contra de él o, por el contrario, puede ser el último que se entere de lo que se está hablando sobre su persona</p>
   <div>
     <a href="dos.html">Página 2</a>
   </div>
